src/objects/Referral_Out__c.object
<CustomObject>
    <description>A table that tracks the referrals out of our system on patients.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to an account that was referred out.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals Out</relationshipLabel>
        <relationshipName>Referrals_Out</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Callback_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a callback should be scheduled for this patient</description>
        <label>Callback Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClearConnect_Referral_ID__c</fullName>
        <externalId>true</externalId>
        <label>ClearConnect Referral ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Practice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The practice the patient was referred to.</description>
        <label>Dental Practice</label>
        <referenceTo>Dental_Practice__c</referenceTo>
        <relationshipLabel>Referrals Out</relationshipLabel>
        <relationshipName>Referrals_Out</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Plan__c</fullName>
        <description>Insurance Plan the patient was on at the time of the referral request</description>
        <label>Insurance Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to a lead that was referred out</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Referrals Out</relationshipLabel>
        <relationshipName>Referrals_Out</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Callback_Time__c</fullName>
        <label>Preferred Callback Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Interested_In__c</fullName>
        <description>List of the procedure(s) the patient was interested in at the time of the referral.</description>
        <label>Procedure(s) Interested In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hygiene</fullName>
                </value>
                <value>
                    <fullName>Crown &amp; Bridge</fullName>
                </value>
                <value>
                    <fullName>Teeth Whitening</fullName>
                </value>
                <value>
                    <fullName>Dentures</fullName>
                </value>
                <value>
                    <fullName>Invisalign</fullName>
                </value>
                <value>
                    <fullName>Botox</fullName>
                </value>
                <value>
                    <fullName>Traditional Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Endontics</fullName>
                </value>
                <value>
                    <fullName>Dental Implants</fullName>
                </value>
                <value>
                    <fullName>Laser Dentistry</fullName>
                </value>
                <value>
                    <fullName>Veneers</fullName>
                </value>
                <value>
                    <fullName>Wisdom Teeth Extractions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Error__c</fullName>
        <description>Stores any error messages for a failed referral request.</description>
        <label>Referral Error</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Notes__c</fullName>
        <label>Referral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Outcome__c</fullName>
        <label>Referral Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dead Air</fullName>
                </value>
                <value>
                    <fullName>Refused Transfer</fullName>
                </value>
                <value>
                    <fullName>Test Call</fullName>
                </value>
                <value>
                    <fullName>Transfer Failed - Caller Disconnect</fullName>
                </value>
                <value>
                    <fullName>Transfer Failed - No Answer</fullName>
                </value>
                <value>
                    <fullName>Transfer Successful</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>PEC Referral Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vantage_Response__c</fullName>
        <label>Vantage Response</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Referral Out</label>
    <nameField>
        <displayFormat>REF-{00000}</displayFormat>
        <label>Referral Out Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals Out</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>